# TinyVirtManager

./: .gitignore  CMakeLists.txt  README.md  driver-hypervisor.cpp  driver-hypervisor.h  driver-network.cpp  driver-network.h  driver-storage.cpp  driver-storage.h  driver_hypervidor.cpp  driver_hypervisor.h  main.cpp  makefile  myLibvirt.conf  myVirsh.cpp  praseXML  test.xml  virConnect.cpp  virConnect.h  virDomain.cpp  virDomain.h  virNetwork.cpp  virNetwork.h  virStoragePool.cpp  virStoragePool.h  virStorageVol.cpp  virStorageVol.h  vir_manager
conf/: config_manager.cpp  config_manager.h  domain_conf.h  driver_conf.cpp  driver_conf.h  network_conf.h  storage_conf.h
examples/: Makefile  monitor  monitor_example.cpp  readme.md
log/: buffer.h  log.cpp  log.h
monitor/: monitor.cpp  monitor.h
qemu/: qemu_conf.cpp  qemu_conf.h  qemu_domain.h  qemu_driver.cpp  qemu_driver.h  qemu_monitor.cpp  qemu_monitor.h
storage/: storage_driver.cpp  storage_driver.h
temp/domains/: .xml  debian.xml  test.xml  testvm.xml
temp/networks/: br0-net.xml  default.xml  nat.xml
temp/storage/pools/: default.xml
util/: createDir.h  generate_uuid.h
xen/: xen.md  xen_domain.h  xen_driver.cpp  xen_driver.h
